tests/parser/should_pass/symmetry.csp
assert P :[symmetric]: T
assert P :[symmetric]: T, Q
