tests/parser/should_fail/symmetry4.csp
assert 0 :[symmetric]: diff(x, y)
